--- a/bin/dune
+++ b/bin/dune
@@ -1,12 +1,4 @@
 (executable
  (public_name final_project)
  (name main)
-<<<<<<< HEAD
- (libraries final_project graphics))
-=======
-<<<<<<< HEAD
- (libraries final_project graphics))
-=======
- (libraries lablgtk3 final_project))
->>>>>>> refs/remotes/origin/main
->>>>>>> refs/remotes/origin/main
+ (libraries graphics final_project))
