Created a basic character and enemy type -Added three cards for character -Added two attacks for enemy

--- a/bin/dune
+++ b/bin/dune
@@ -1,5 +1,4 @@
 (executable
  (public_name final_project)
  (name main)
-
- (libraries graphics final_project))
+ (libraries final_project graphics))
