--- a/bin/dune
+++ b/bin/dune
@@ -1,5 +1,4 @@
 (executable
  (public_name final_project)
  (name main)
-
- (libraries final_project graphics cairo2))
+ (libraries final_project graphics))
